# fakeua

./: .gitignore  README.md  pyproject.toml  setup.py
fakeua/: __main__.py  fakeua.py
