[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakeua"
version = "0.2.0"
description = "Python module made as a wrapper of fake-useragent."
readme = "README.md"

license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
keywords = ["fake", "useragent", "networking", "web"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"
dependencies = [
    "fake-useragent",
]

[project.urls]
Repository = "https://github.com/carlosplanchon/fakeua"

[project.scripts]
fakeua = "fakeua.__main__:main"

[tool.setuptools]
packages = ["fakeua"]
